# pgeDescartes

./: .gitignore  CMakeLists.txt
app/: main.cpp
assets/: temp.txt
cmake/: pge.cmake
include/: olcPixelGameEngine.h
src/: point.cpp  point.h  render_app.cpp  render_app.h
